Update URL in LocalBusiness schema

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     "name": "Jan Schroer - Soporte Técnico IT",
     "description": "Servicios profesionales de soporte técnico, mantenimiento de infraestructura IT y asesoramiento informático en Buenos Aires.",
     "image": "https://example.com/profile.jpg",
-    "url": "https://jan-schroer.github.io",
+    "url": "https://rosenrot3585.github.io/jan-schroer/",
     "telephone": "+54 9 11 6982 4804",
     "address": {
       "@type": "PostalAddress",
