Update experience section in index.html

--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
 
   <section id="experiencia">
     <h2>Experiencia Destacada</h2>
-    <h3>PyP Informática (2021 - Presente)</h3>
+    <h3>Puesto que ocupé en relación de dependiencia</h3>
     <p>Gerente de Operaciones y Proyectos MSP. Coordinación de equipos de Mesa de Ayuda e Infraestructura, gestión de proyectos IT y asistencia en la implementación de estándares ISO.</p>
-    <h3>Teka Informática (2007 - 2021)</h3>
-    <p>Soporte Técnico IT. Atención de soporte niveles 1, 2 y 3, implementación de cableado estructurado y mantenimiento de infraestructura IT.</p>
+    <h3>Mis inicios</h3>
+    <p>Empecé como Técnico Jr. brindando soporte en IT. pasando por los niveles 1, 2 y 3, implementé cableado estructurado y hacía mantenimiento de infraestructura IT.</p>
   </section>
 
   <section id="habilidades">
