--- a/index.html
+++ b/index.html
@@ -94,23 +94,18 @@
 <body>
   <header>
     <h1>Soporte Técnico IT en Buenos Aires</h1>
-    <p>Servicios profesionales de mantenimiento, redes, virtualización y asesoría informática</p>
+    <p>Servicios profesionales de mantenimiento, redes, virtualización y asesoría informática — 15+ años de experiencia</p>
   </header>
 
-  <section id="perfil">
-    <h2>Sobre mí</h2>
-    <p>Soy <strong>Jan Andres Schroer</strong>, profesional de IT con más de 15 años de experiencia en soporte técnico, gestión de operaciones y proyectos MSP. Me especializo en administración de infraestructura, virtualización y soporte a empresas. Ofrezco soluciones prácticas y confiables adaptadas a las necesidades de cada cliente.</p>
-  </section>
 
   <section id="servicios">
     <h2>Servicios de Soporte Técnico IT</h2>
     <ul>
       <li>Soporte técnico remoto y en sitio para empresas y particulares.</li>
-      <li>Gestión y mantenimiento de infraestructura IT.</li>
-      <li>Implementación y configuración de redes y cableado estructurado.</li>
-      <li>Administración de servidores Windows y Linux.</li>
-      <li>Virtualización con VMware vSphere y Proxmox VE.</li>
-      <li>Consultoría en soluciones cloud (Microsoft Azure, Google Workspace, Microsoft 365).</li>
+      <li>Gestión y mantenimiento integral de infraestructura IT (servidores, racks y cableado).</li>
+      <li>Implementación y administración de redes y seguridad (pfSense, Ubiquiti, Mikrotik).</li>
+      <li>Virtualización y administración de entornos (VMware vSphere, Proxmox VE).</li>
+      <li>Consultoría y migraciones a cloud (Microsoft Azure, Microsoft 365, Google Workspace).</li>
     </ul>
   </section>
 
@@ -122,8 +117,8 @@
     <p>Empecé como Técnico Jr. brindando soporte en IT. pasando por los niveles 1, 2 y 3, implementé cableado estructurado y hacía mantenimiento de infraestructura IT.</p>
   </section>
 
-  <section id="habilidades">
-    <h2>Habilidades y Conocimientos</h2>
+  <section id="tecnologias">
+    <h2>Tecnologías</h2>
     <ul>
       <li>VMware vSphere ESXi, Proxmox VE</li>
       <li>pfSense, Mikrotik, Fortinet</li>
@@ -145,7 +140,7 @@
   </section>
 
   <footer>
-    <p>© 2025 Jan Andres Schroer - Servicios de Soporte Técnico IT en Buenos Aires.</p>
+    <p>© 2025 Jan Schroer - Servicios de Soporte Técnico IT en Buenos Aires.</p>
   </footer>
 </body>
 </html>
