Update IT services list in index.html

--- a/index.html
+++ b/index.html
@@ -103,9 +103,11 @@
     <ul>
       <li>Soporte técnico remoto y en sitio para empresas y particulares.</li>
       <li>Gestión y mantenimiento integral de infraestructura IT (servidores, racks y cableado).</li>
+      <li>Mantenimeinto de sistemas.</li>
       <li>Implementación y administración de redes y seguridad (pfSense, Ubiquiti, Mikrotik).</li>
-      <li>Virtualización y administración de entornos (VMware vSphere, Proxmox VE).</li>
-      <li>Consultoría y migraciones a cloud (Microsoft Azure, Microsoft 365, Google Workspace).</li>
+      <li>Virtualización y administración de entornos.</li>
+      <li>Servicios Cloud.</li>
+      <li>Consultoría IT.</li>
     </ul>
   </section>
 
