--- a/index.html
+++ b/index.html
@@ -1,46 +1,49 @@
 <!DOCTYPE html>
-
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Soporte Técnico IT en Buenos Aires | Jan Schroer</title>
-  <meta name="description" content="Soporte técnico y consultoría IT profesional en Buenos Aires. Mantenimiento de infraestructura, redes, virtualización y servicios cloud para empresas y particulares." />
-  <meta name="author" content="Jan Andres Schroer" />
-
-  <!-- Estilos -->
+  <title>Soporte Técnico IT | Jan Schroer</title>
 
   <style>
+    :root {
+      --bg-color: #f4f7fa;
+      --text-color: #1c1c1c;
+      --section-bg: #fff;
+      --accent: #0077b6;
+      --header-bg: linear-gradient(135deg, #0a192f, #0e356a);
+    }
+
+    body.dark {
+      --bg-color: #0b1c3f;
+      --text-color: #e1e1e1;
+      --section-bg: #14233d;
+      --accent: #00bfff;
+      --header-bg: linear-gradient(135deg, #0b1c3f, #1e355f);
+    }
+
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: #f4f7fa;
-      color: #1c1c1c;
+      background-color: var(--bg-color);
+      color: var(--text-color);
       line-height: 1.6;
+      transition: background-color 0.3s ease, color 0.3s ease;
     }
 
     header {
-      background: linear-gradient(135deg, #0a192f, #0e356a);
+      background: var(--header-bg);
       color: white;
       text-align: center;
       padding: 5rem 1rem 4rem;
       position: relative;
-      overflow: hidden;
     }
-
-    header h1 {
-      font-size: 2.5rem;
-      animation: fadeIn 1s ease-in-out;
-    }
-    header p {
-      font-size: 1.2rem;
-      margin-top: 0.8rem;
-      opacity: 0.9;
-    }
+    header h1 { font-size: 2.5rem; }
+    header p { font-size: 1.2rem; margin-top: 0.8rem; opacity: 0.9; }
     .btn-contacto {
       margin-top: 2rem;
       display: inline-block;
-      background-color: #0077b6;
+      background-color: var(--accent);
       color: white;
       padding: 0.8rem 1.6rem;
       border-radius: 8px;
@@ -53,34 +56,30 @@
     section {
       max-width: 950px;
       margin: 3rem auto;
-      background: white;
+      background: var(--section-bg);
       padding: 2rem;
       border-radius: 12px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.05);
       opacity: 0;
       transform: translateY(30px);
-      transition: opacity 0.8s ease, transform 0.8s ease;
+      transition: opacity 0.8s ease, transform 0.8s ease, background 0.3s ease, color 0.3s ease;
     }
-
-    section.visible {
-      opacity: 1;
-      transform: translateY(0);
-    }
+    section.visible { opacity: 1; transform: translateY(0); }
 
     h2 {
-      color: #0a192f;
+      color: var(--accent);
       margin-bottom: 1rem;
-      border-left: 4px solid #0077b6;
+      border-left: 4px solid var(--accent);
       padding-left: 0.6rem;
     }
 
     ul { list-style: none; margin-top: 0.5rem; }
-    li::before { content: "✔ "; color: #0077b6; font-weight: bold; }
+    li::before { content: "✔ "; color: var(--accent); font-weight: bold; }
 
     footer {
       text-align: center;
       padding: 2rem 1rem;
-      color: #666;
+      color: #ccc;
       font-size: 0.9rem;
     }
 
@@ -88,7 +87,7 @@
       display: inline-block;
       margin: 0.5rem;
       text-decoration: none;
-      background-color: #0077b6;
+      background-color: var(--accent);
       color: white;
       padding: 0.7rem 1.2rem;
       border-radius: 6px;
@@ -96,7 +95,7 @@
     }
     .contacto a:hover { background-color: #005f86; }
 
-    /* Botón fijo de WhatsApp */
+    /* Botón flotante de WhatsApp */
     .whatsapp-fixed {
       position: fixed;
       bottom: 20px;
@@ -119,19 +118,39 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.4);
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
+    /* Botón de modo oscuro */
+    .dark-toggle {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background-color: var(--accent);
+      color: white;
+      border: none;
+      border-radius: 6px;
+      padding: 0.5rem 1rem;
+      cursor: pointer;
+      z-index: 101;
+      transition: background-color 0.3s ease;
     }
+    .dark-toggle:hover { background-color: #005f86; }
 
-    @media (max-width: 768px) {
-      header h1 { font-size: 1.8rem; }
-      section { margin: 1.5rem 1rem; padding: 1.5rem; }
+    /* Servicios con descripción oculta */
+    .servicio-header { display: flex; justify-content: space-between; align-items: center; cursor: pointer; padding: 0.6rem 0; }
+    .toggle-desc {
+      background: var(--accent);
+      color: white;
+      border: none;
+      border-radius: 50%;
+      width: 28px; height: 28px; font-size: 18px; line-height: 0;
+      cursor: pointer; transition: transform 0.3s ease;
     }
+    .servicio-desc { display: none; margin: 0.5rem 0 1rem 0; padding-left: 1rem; border-left: 2px solid var(--accent); color: var(--text-color); }
+    .toggle-desc.active { transform: rotate(45deg); }
   </style>
-
 </head>
 <body>
+
+  <button class="dark-toggle">🌙</button>
 
   <header>
     <h1>Soporte Técnico IT en Buenos Aires</h1>
@@ -147,12 +166,30 @@
   <section id="servicios">
     <h2>Servicios</h2>
     <ul>
-      <li>Soporte técnico remoto y en sitio.</li>
-      <li>Mantenimiento preventivo y correctivo de servidores y redes.</li>
-      <li>Implementación y administración de redes seguras (pfSense, Mikrotik, Ubiquiti).</li>
-      <li>Virtualización y entornos de alta disponibilidad.</li>
-      <li>Consultoría y optimización de infraestructura IT.</li>
-      <li>Configuración y gestión de servicios Cloud (Microsoft 365, Azure, Google Workspace).</li>
+      <li>
+        <div class="servicio-header"><span>Soporte remoto y en sitio</span><button class="toggle-desc">+</button></div>
+        <p class="servicio-desc">Atención rápida y profesional, ya sea remota o presencial.</p>
+      </li>
+      <li>
+        <div class="servicio-header"><span>Mantenimiento de servidores y redes</span><button class="toggle-desc">+</button></div>
+        <p class="servicio-desc">Chequeo preventivo, actualizaciones y reparación de infraestructura IT.</p>
+      </li>
+      <li>
+        <div class="servicio-header"><span>Redes seguras</span><button class="toggle-desc">+</button></div>
+        <p class="servicio-desc">Implementación y administración de firewalls y routers con pfSense, Mikrotik y Ubiquiti.</p>
+      </li>
+      <li>
+        <div class="servicio-header"><span>Virtualización y alta disponibilidad</span><button class="toggle-desc">+</button></div>
+        <p class="servicio-desc">Entornos virtuales optimizados para garantizar continuidad y eficiencia.</p>
+      </li>
+      <li>
+        <div class="servicio-header"><span>Consultoría IT</span><button class="toggle-desc">+</button></div>
+        <p class="servicio-desc">Asesoramiento experto para optimizar sistemas y planificar infraestructura tecnológica.</p>
+      </li>
+      <li>
+        <div class="servicio-header"><span>Servicios Cloud</span><button class="toggle-desc">+</button></div>
+        <p class="servicio-desc">Configuración y gestión de Microsoft 365, Azure y Google Workspace.</p>
+      </li>
     </ul>
   </section>
 
@@ -180,24 +217,33 @@
     <p>© 2025 Jan Schroer — Soporte Técnico IT en Buenos Aires</p>
   </footer>
 
-  <!-- Botón flotante de WhatsApp -->
-
-  <a href="https://wa.me/5491169824804" class="whatsapp-fixed" target="_blank" title="Enviar mensaje por WhatsApp">
-    💬
-  </a>
+  <a href="https://wa.me/5491169824804" class="whatsapp-fixed" target="_blank" title="Enviar mensaje por WhatsApp">💬</a>
 
   <script>
+    // Toggle dark/light
+    const toggleBtn = document.querySelector('.dark-toggle');
+    toggleBtn.addEventListener('click', () => {
+      document.body.classList.toggle('dark');
+    });
+
     // Animación al hacer scroll
     const sections = document.querySelectorAll("section");
     const observer = new IntersectionObserver(entries => {
       entries.forEach(entry => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add("visible");
-        }
+        if (entry.isIntersecting) entry.target.classList.add("visible");
       });
     }, { threshold: 0.2 });
-
     sections.forEach(sec => observer.observe(sec));
+
+    // Servicios desplegables
+    document.querySelectorAll('.toggle-desc').forEach(btn => {
+      btn.addEventListener('click', () => {
+        const desc = btn.parentElement.nextElementSibling;
+        const isVisible = desc.style.display === 'block';
+        desc.style.display = isVisible ? 'none' : 'block';
+        btn.classList.toggle('active', !isVisible);
+      });
+    });
   </script>
 
 </body>
