--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       --accent: #0077b6;
       --header-bg: linear-gradient(135deg, #0a192f, #0e356a);
     }
-
     body.dark {
       --bg-color: #0b1c3f;
       --text-color: #e1e1e1;
@@ -38,8 +37,8 @@
       padding: 5rem 1rem 4rem;
       position: relative;
     }
-    header h1 { font-size: 2.5rem; }
-    header p { font-size: 1.2rem; margin-top: 0.8rem; opacity: 0.9; }
+    header h1 { font-size: 2.8rem; margin-bottom: 0.5rem; }
+    header p { font-size: 1.2rem; opacity: 0.9; }
     .btn-contacto {
       margin-top: 2rem;
       display: inline-block;
@@ -49,9 +48,9 @@
       border-radius: 8px;
       text-decoration: none;
       font-weight: 500;
-      transition: background-color 0.3s ease;
+      transition: all 0.3s ease;
     }
-    .btn-contacto:hover { background-color: #005f86; }
+    .btn-contacto:hover { background-color: #005f86; transform: translateY(-2px); }
 
     section {
       max-width: 950px;
@@ -59,7 +58,7 @@
       background: var(--section-bg);
       padding: 2rem;
       border-radius: 12px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
       opacity: 0;
       transform: translateY(30px);
       transition: opacity 0.8s ease, transform 0.8s ease, background 0.3s ease, color 0.3s ease;
@@ -69,12 +68,9 @@
     h2 {
       color: var(--accent);
       margin-bottom: 1rem;
-      border-left: 4px solid var(--accent);
-      padding-left: 0.6rem;
+      border-left: 5px solid var(--accent);
+      padding-left: 0.8rem;
     }
-
-    ul { list-style: none; margin-top: 0.5rem; }
-    li::before { content: "✔ "; color: var(--accent); font-weight: bold; }
 
     footer {
       text-align: center;
@@ -91,9 +87,9 @@
       color: white;
       padding: 0.7rem 1.2rem;
       border-radius: 6px;
-      transition: background-color 0.3s ease;
+      transition: all 0.3s ease;
     }
-    .contacto a:hover { background-color: #005f86; }
+    .contacto a:hover { background-color: #005f86; transform: translateY(-2px); }
 
     /* Botón flotante de WhatsApp */
     .whatsapp-fixed {
@@ -109,13 +105,13 @@
       align-items: center;
       justify-content: center;
       font-size: 28px;
-      box-shadow: 0 3px 8px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
       transition: transform 0.3s ease, box-shadow 0.3s ease;
       z-index: 100;
     }
     .whatsapp-fixed:hover {
       transform: scale(1.05);
-      box-shadow: 0 4px 10px rgba(0,0,0,0.4);
+      box-shadow: 0 5px 12px rgba(0,0,0,0.4);
     }
 
     /* Botón de modo oscuro */
@@ -135,17 +131,57 @@
     .dark-toggle:hover { background-color: #005f86; }
 
     /* Servicios con descripción oculta */
-    .servicio-header { display: flex; justify-content: space-between; align-items: center; cursor: pointer; padding: 0.6rem 0; }
+    .servicio-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      cursor: pointer;
+      padding: 0.6rem 0;
+      transition: background 0.3s ease;
+      border-radius: 8px;
+    }
+    .servicio-header:hover { background: rgba(0,0,0,0.03); }
+    .servicio-header span { display: flex; align-items: center; font-weight: 500; }
+    .servicio-icon { color: var(--accent); margin-right: 0.5rem; }
     .toggle-desc {
       background: var(--accent);
       color: white;
       border: none;
       border-radius: 50%;
-      width: 28px; height: 28px; font-size: 18px; line-height: 0;
-      cursor: pointer; transition: transform 0.3s ease;
+      width: 28px; height: 28px;
+      font-size: 18px; line-height: 0;
+      cursor: pointer;
+      transition: transform 0.3s ease;
     }
-    .servicio-desc { display: none; margin: 0.5rem 0 1rem 0; padding-left: 1rem; border-left: 2px solid var(--accent); color: var(--text-color); }
-    .toggle-desc.active { transform: rotate(45deg); }
+    .servicio-desc {
+      max-height: 0;
+      overflow: hidden;
+      margin: 0 0 0 1.8rem;
+      padding-left: 0.2rem;
+      border-left: 2px solid var(--accent);
+      color: var(--text-color);
+      transition: max-height 0.5s ease, opacity 0.5s ease;
+      opacity: 0;
+    }
+    .servicio-desc.show {
+      max-height: 200px;
+      opacity: 1;
+    }
+
+    /* Banner / imagen */
+    .banner {
+      width: 100%;
+      border-radius: 12px;
+      margin: 1.5rem 0;
+      overflow: hidden;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    .banner img { width: 100%; display: block; object-fit: cover; }
+
+    @media (max-width: 768px) {
+      header h1 { font-size: 2rem; }
+      section { margin: 1.5rem 1rem; padding: 1.5rem; }
+    }
   </style>
 </head>
 <body>
@@ -158,6 +194,11 @@
     <a href="#contacto" class="btn-contacto">Contactame</a>
   </header>
 
+  <!-- Banner -->
+  <div class="banner">
+    <img src="https://images.unsplash.com/photo-1581091215363-4b1a4c529c0a?auto=format&fit=crop&w=1400&q=80" alt="Tecnología e infraestructura IT">
+  </div>
+
   <section id="perfil">
     <h2>Sobre mí</h2>
     <p>Soy <strong>Jan Schroer</strong>, profesional en soporte técnico y administración de infraestructura IT. Brindo atención personalizada a empresas y particulares, asegurando entornos tecnológicos estables, seguros y eficientes.</p>
@@ -167,31 +208,54 @@
     <h2>Servicios</h2>
     <ul>
       <li>
-        <div class="servicio-header"><span>Soporte remoto y en sitio</span><button class="toggle-desc">+</button></div>
+        <div class="servicio-header">
+          <span><span class="servicio-icon">✔</span>Soporte remoto y en sitio</span>
+          <button class="toggle-desc">+</button>
+        </div>
         <p class="servicio-desc">Atención rápida y profesional, ya sea remota o presencial.</p>
       </li>
       <li>
-        <div class="servicio-header"><span>Mantenimiento de servidores y redes</span><button class="toggle-desc">+</button></div>
+        <div class="servicio-header">
+          <span><span class="servicio-icon">✔</span>Mantenimiento de servidores y redes</span>
+          <button class="toggle-desc">+</button>
+        </div>
         <p class="servicio-desc">Chequeo preventivo, actualizaciones y reparación de infraestructura IT.</p>
       </li>
       <li>
-        <div class="servicio-header"><span>Redes seguras</span><button class="toggle-desc">+</button></div>
+        <div class="servicio-header">
+          <span><span class="servicio-icon">✔</span>Redes seguras</span>
+          <button class="toggle-desc">+</button>
+        </div>
         <p class="servicio-desc">Implementación y administración de firewalls y routers con pfSense, Mikrotik y Ubiquiti.</p>
       </li>
       <li>
-        <div class="servicio-header"><span>Virtualización y alta disponibilidad</span><button class="toggle-desc">+</button></div>
+        <div class="servicio-header">
+          <span><span class="servicio-icon">✔</span>Virtualización y alta disponibilidad</span>
+          <button class="toggle-desc">+</button>
+        </div>
         <p class="servicio-desc">Entornos virtuales optimizados para garantizar continuidad y eficiencia.</p>
       </li>
       <li>
-        <div class="servicio-header"><span>Consultoría IT</span><button class="toggle-desc">+</button></div>
+        <div class="servicio-header">
+          <span><span class="servicio-icon">✔</span>Consultoría IT</span>
+          <button class="toggle-desc">+</button>
+        </div>
         <p class="servicio-desc">Asesoramiento experto para optimizar sistemas y planificar infraestructura tecnológica.</p>
       </li>
       <li>
-        <div class="servicio-header"><span>Servicios Cloud</span><button class="toggle-desc">+</button></div>
+        <div class="servicio-header">
+          <span><span class="servicio-icon">✔</span>Servicios Cloud</span>
+          <button class="toggle-desc">+</button>
+        </div>
         <p class="servicio-desc">Configuración y gestión de Microsoft 365, Azure y Google Workspace.</p>
       </li>
     </ul>
   </section>
+
+  <!-- Banner 2 -->
+  <div class="banner">
+    <img src="https://images.unsplash.com/photo-1581090700227-6d8b54b4f2b8?auto=format&fit=crop&w=1400&q=80" alt="Consultoría IT">
+  </div>
 
   <section id="tecnologias">
     <h2>Tecnologías</h2>
@@ -222,9 +286,7 @@
   <script>
     // Toggle dark/light
     const toggleBtn = document.querySelector('.dark-toggle');
-    toggleBtn.addEventListener('click', () => {
-      document.body.classList.toggle('dark');
-    });
+    toggleBtn.addEventListener('click', () => document.body.classList.toggle('dark'));
 
     // Animación al hacer scroll
     const sections = document.querySelectorAll("section");
@@ -235,16 +297,16 @@
     }, { threshold: 0.2 });
     sections.forEach(sec => observer.observe(sec));
 
-    // Servicios desplegables
+    // Servicios desplegables con animación suave
     document.querySelectorAll('.toggle-desc').forEach(btn => {
       btn.addEventListener('click', () => {
         const desc = btn.parentElement.nextElementSibling;
-        const isVisible = desc.style.display === 'block';
-        desc.style.display = isVisible ? 'none' : 'block';
-        btn.classList.toggle('active', !isVisible);
+        const show = desc.classList.contains('show');
+        desc.classList.toggle('show', !show);
+        btn.classList.toggle('active', !show);
       });
     });
   </script>
-
 </body>
 </html>
+
