--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
       padding-left: 0.8rem;
     }
 
+    li {
+      margin-bottom: 1rem;
+      list-style: none;
+    }
+
     footer {
       text-align: center;
       padding: 2rem 1rem;
