--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 </head>
 <body>
 
-  <button class="dark-toggle">🌙</button>
+  <button class="dark-toggle"> ☾/☀︎ </button>
 
   <header>
     <h1>Soporte Técnico IT en Buenos Aires</h1>
@@ -201,7 +201,7 @@
 
   <!-- Banner -->
   <div class="banner">
-    <img src="https://images.unsplash.com/photo-1581091215363-4b1a4c529c0a?auto=format&fit=crop&w=1400&q=80" alt="Tecnología e infraestructura IT">
+    <img src="https://images.nightcafe.studio/jobs/tQuU6YrloO8EuOs3Hioa/tQuU6YrloO8EuOs3Hioa--0--ny0ah.jpg?tr=w-1600,c-at_max" alt="Tecnología e infraestructura IT">
   </div>
 
   <section id="perfil">
