--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     header {
       background: var(--header-bg);
+      background-image: url(https://images.nightcafe.studio/jobs/tQuU6YrloO8EuOs3Hioa/tQuU6YrloO8EuOs3Hioa--0--ny0ah.jpg?tr=w-1600,c-at_max);
       color: white;
       text-align: center;
       padding: 5rem 1rem 4rem;
@@ -242,12 +243,7 @@
     <a href="#contacto" class="btn-contacto">Contactame</a>
   </header>
 
-  <!-- Banner grande -->
-  <div class="banner">
-    <img src="https://images.nightcafe.studio/jobs/tQuU6YrloO8EuOs3Hioa/tQuU6YrloO8EuOs3Hioa--0--ny0ah.jpg?tr=w-1600,c-at_max" alt="Tecnología e infraestructura IT">
-  </div>
-
-  <section id="perfil">
+   <section id="perfil">
     <h2>Sobre mí</h2>
     <p>Soy <strong>Jan Schroer</strong>, profesional en soporte técnico y administración de infraestructura IT. Brindo atención personalizada a empresas y particulares, asegurando entornos tecnológicos estables, seguros y eficientes.</p>
   </section>
