--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
     header {
       background: var(--header-bg);
       background-image: url(https://images.nightcafe.studio/jobs/tQuU6YrloO8EuOs3Hioa/tQuU6YrloO8EuOs3Hioa--0--ny0ah.jpg?tr=w-1600,c-at_max);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
       color: white;
       text-align: center;
       padding: 5rem 1rem 4rem;
