--- a/index.html
+++ b/index.html
@@ -3,113 +3,231 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Soporte Técnico IT | Jan Schroer</title>
+  <title>Jan Schroer | Soporte Técnico IT</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a2c0b2d2b9.js" crossorigin="anonymous"></script>
 
   <style>
     :root {
-      --bg-color: #f4f7fa;
-      --text-color: #1c1c1c;
-      --section-bg: #fff;
-      --accent: #0077b6;
-      --header-bg: linear-gradient(135deg, #0a192f, #0e356a);
+      --bg-color: #0a192f;
+      --section-bg: #112240;
+      --text-color: #e6f1ff;
+      --accent: #64ffda;
+      --accent-hover: #45e6c0;
+      --header-bg: linear-gradient(135deg, #0a192f, #112240);
     }
-    body.dark {
-      --bg-color: #0b1c3f;
-      --text-color: #e1e1e1;
-      --section-bg: #14233d;
-      --accent: #00bfff;
-      --header-bg: linear-gradient(135deg, #0b1c3f, #1e355f);
+    body.light {
+      --bg-color: #f4f7fa;
+      --section-bg: #fff;
+      --text-color: #1c1c1c;
+      --accent: #0077b6;
+      --accent-hover: #005f86;
+      --header-bg: linear-gradient(135deg, #0e356a, #1c5fa8);
     }
 
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background-color: var(--bg-color);
+      font-family: 'Poppins', sans-serif;
+      background: var(--bg-color);
       color: var(--text-color);
-      line-height: 1.6;
-      transition: background-color 0.3s ease, color 0.3s ease;
+      transition: background 0.4s ease, color 0.4s ease;
+      overflow-x: hidden;
     }
 
     header {
       background: var(--header-bg);
-      background-image: url(https://images.nightcafe.studio/jobs/OsPJHKwqzCLzKbEV9Mh8/OsPJHKwqzCLzKbEV9Mh8--0--6zz9j.jpg?tr=w-1600,c-at_max);
-      background-repeat: no-repeat;
-      background-position: center center;
-      background-size: cover;
       color: white;
       text-align: center;
       padding: 5rem 1rem 4rem;
       position: relative;
     }
-    #fondo:before {
-	content:'';
-	position: absolute;
-        top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background-color: rgba(0,0,0,0.6);
-}
-    header h1 { font-size: 2.8rem; margin-bottom: 0.5rem; }
-    header p { font-size: 1.2rem; opacity: 0.9; }
+
+    header h1 {
+      font-size: 2.6rem;
+      letter-spacing: 1px;
+    }
+
+    header p {
+      font-size: 1.2rem;
+      opacity: 0.85;
+      margin-top: 0.5rem;
+    }
+
     .btn-contacto {
       margin-top: 2rem;
       display: inline-block;
-      background-color: var(--accent);
-      color: white;
-      padding: 0.8rem 1.6rem;
+      background: var(--accent);
+      color: #0a192f;
+      padding: 0.9rem 1.8rem;
       border-radius: 8px;
+      font-weight: 600;
       text-decoration: none;
-      font-weight: 500;
-      transition: all 0.3s ease;
+      transition: background 0.3s ease, transform 0.3s ease;
     }
-    .btn-contacto:hover { background-color: #005f86; transform: translateY(-2px); }
+
+    .btn-contacto:hover {
+      background: var(--accent-hover);
+      transform: translateY(-2px);
+    }
+
+    .dark-toggle {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      background: var(--accent);
+      color: #0a192f;
+      border: none;
+      border-radius: 20px;
+      padding: 0.5rem 1rem;
+      font-weight: 600;
+      cursor: pointer;
+      z-index: 101;
+      transition: background 0.3s ease;
+    }
+
+    .dark-toggle:hover { background: var(--accent-hover); }
 
     section {
-      max-width: 950px;
+      max-width: 1000px;
       margin: 3rem auto;
       background: var(--section-bg);
-      padding: 2rem;
+      padding: 2.5rem;
       border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.08);
+      box-shadow: 0 4px 20px rgba(0,0,0,0.25);
       opacity: 0;
       transform: translateY(30px);
-      transition: opacity 0.8s ease, transform 0.8s ease, background 0.3s ease, color 0.3s ease;
+      transition: opacity 0.8s ease, transform 0.8s ease, background 0.4s ease, color 0.4s ease;
     }
+
     section.visible { opacity: 1; transform: translateY(0); }
 
     h2 {
       color: var(--accent);
       margin-bottom: 1rem;
-      border-left: 5px solid var(--accent);
+      border-left: 4px solid var(--accent);
       padding-left: 0.8rem;
+      font-size: 1.6rem;
     }
 
-    li {
-      margin-bottom: 1rem;
-      list-style: none;
+    p { margin-bottom: 1rem; line-height: 1.7; }
+
+    /* Servicios */
+    ul { list-style: none; padding: 0; }
+
+    .servicio-header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      cursor: pointer;
+      padding: 0.8rem 0.5rem;
+      border-bottom: 1px solid rgba(255,255,255,0.08);
+      transition: background 0.3s ease;
     }
 
-    footer {
-      text-align: center;
-      padding: 2rem 1rem;
-      color: #ccc;
-      font-size: 0.9rem;
+    .servicio-header:hover { background: rgba(255,255,255,0.05); }
+
+    .servicio-header span {
+      display: flex;
+      align-items: center;
+      font-weight: 500;
+      font-size: 1.1rem;
     }
 
+    .servicio-header i {
+      color: var(--accent);
+      margin-right: 0.6rem;
+    }
+
+    .toggle-desc {
+      background: none;
+      border: none;
+      color: var(--accent);
+      font-size: 1.3rem;
+      cursor: pointer;
+      transition: transform 0.3s ease;
+    }
+
+    .toggle-desc.active { transform: rotate(45deg); }
+
+    .servicio-desc {
+      max-height: 0;
+      overflow: hidden;
+      opacity: 0;
+      padding-left: 2rem;
+      border-left: 2px solid var(--accent);
+      color: var(--text-color);
+      transition: all 0.4s ease;
+      font-size: 0.95rem;
+    }
+
+    .servicio-desc.show {
+      max-height: 200px;
+      opacity: 1;
+      margin-top: 0.5rem;
+    }
+
+    /* Banners */
+    .banner, .banner-tec {
+      width: 100%;
+      max-width: 1000px;
+      margin: 2rem auto;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.25);
+    }
+
+    .banner img, .banner-tec img {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      transition: transform 0.5s ease;
+    }
+
+    .banner img:hover, .banner-tec img:hover {
+      transform: scale(1.05);
+    }
+
+    .banner-tec img { height: 150px; }
+
+    /* Contacto */
     .contacto a {
       display: inline-block;
       margin: 0.5rem;
       text-decoration: none;
-      background-color: var(--accent);
-      color: white;
-      padding: 0.7rem 1.2rem;
+      background: var(--accent);
+      color: #0a192f;
+      padding: 0.7rem 1.4rem;
       border-radius: 6px;
-      transition: all 0.3s ease;
+      font-weight: 600;
+      transition: background 0.3s ease, transform 0.3s ease;
     }
-    .contacto a:hover { background-color: #005f86; transform: translateY(-2px); }
 
-    /* Botón flotante de WhatsApp */
+    .contacto a:hover {
+      background: var(--accent-hover);
+      transform: translateY(-2px);
+    }
+
+    /* Footer */
+    footer {
+      text-align: center;
+      padding: 2rem 1rem;
+      color: #8892b0;
+      font-size: 0.9rem;
+      background: #0a192f;
+    }
+
+    footer .social a {
+      color: var(--accent);
+      margin: 0 0.5rem;
+      font-size: 1.2rem;
+      transition: color 0.3s ease;
+    }
+
+    footer .social a:hover { color: var(--accent-hover); }
+
+    /* WhatsApp */
     .whatsapp-fixed {
       position: fixed;
       bottom: 20px;
@@ -124,140 +242,35 @@
       justify-content: center;
       font-size: 28px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      transition: transform 0.3s ease;
       z-index: 100;
     }
-    .whatsapp-fixed:hover {
-      transform: scale(1.05);
-      box-shadow: 0 5px 12px rgba(0,0,0,0.4);
-    }
 
-    /* Botón de modo oscuro */
-    .dark-toggle {
-      position: fixed;
-      top: 20px;
-      right: 20px;
-      background-color: var(--accent);
-      color: white;
-      border: none;
-      border-radius: 6px;
-      padding: 0.5rem 1rem;
-      cursor: pointer;
-      z-index: 101;
-      transition: background-color 0.3s ease;
-    }
-    .dark-toggle:hover { background-color: #005f86; }
-
-    /* Servicios con descripción oculta */
-    .servicio-header {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      cursor: pointer;
-      padding: 0.6rem 0;
-      transition: background 0.3s ease;
-      border-radius: 8px;
-    }
-    .servicio-header:hover { background: rgba(0,0,0,0.03); }
-    .servicio-header span { display: flex; align-items: center; font-weight: 500; }
-    .servicio-icon {
-      background: var(--accent);
-      color: white;
-      border-radius: 50%;
-      width: 24px;
-      height: 24px;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      margin-right: 0.5rem;
-      font-size: 14px;
-    }
-    .toggle-desc {
-      background: var(--accent);
-      color: white;
-      border: none;
-      border-radius: 50%;
-      width: 28px; height: 28px;
-      font-size: 18px; line-height: 0;
-      cursor: pointer;
-      transition: transform 0.3s ease;
-    }
-    .servicio-desc {
-      max-height: 0;
-      overflow: hidden;
-      margin: 0 0 0 1.8rem;
-      padding-left: 0.2rem;
-      border-left: 2px solid var(--accent);
-      color: var(--text-color);
-      transition: max-height 0.5s ease, opacity 0.5s ease, padding 0.3s ease;
-      opacity: 0;
-      padding-top: 0;
-      padding-bottom: 0;
-    }
-    .servicio-desc.show {
-      max-height: 200px;
-      opacity: 1;
-      padding-top: 0.5rem;
-      padding-bottom: 0.5rem;
-    }
-
-    /* Banner / imagen grande */
-    .banner {
-      width: 100%;
-      border-radius: 12px;
-      margin: 1.5rem 0;
-      overflow: hidden;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-    .banner img {
-      width: 100%;
-      display: block;
-      object-fit: cover;
-      transition: transform 0.5s ease;
-    }
-    .banner img:hover {
-      transform: scale(1.03);
-    }
-
-    /* Imagen más delgada estilo header para sección tecnologías */
-    .banner-tec {
-      width: 100%;
-      max-width: 950px;
-      margin: 2rem auto;
-      overflow: hidden;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-    }
-    .banner-tec img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-      transition: transform 0.5s ease;
-    }
-    .banner-tec img:hover {
-      transform: scale(1.03);
-    }
+    .whatsapp-fixed:hover { transform: scale(1.07); }
 
     @media (max-width: 768px) {
       header h1 { font-size: 2rem; }
-      section { margin: 1.5rem 1rem; padding: 1.5rem; }
-      .banner-tec img { height: 140px; }
+      section { padding: 1.5rem; margin: 1.5rem; }
     }
   </style>
 </head>
-<body>
 
-  <button class="dark-toggle">☾</button>
+<body>
+  <button class="dark-toggle">☾ / ☀︎</button>
 
   <header>
-    <h1>Soporte Técnico IT en Buenos Aires</h1>
-    <p>Soluciones confiables en infraestructura, redes y servicios cloud — más de 15 años de experiencia.</p>
+    <h1>Soporte Técnico IT</h1>
+    <p>Infraestructura, redes y servicios cloud — más de 15 años de experiencia profesional.</p>
     <a href="#contacto" class="btn-contacto">Contactame</a>
   </header>
 
-   <section id="perfil">
+  <div class="banner">
+    <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=1600&q=80" alt="Tecnología moderna">
+  </div>
+
+  <section id="perfil">
     <h2>Sobre mí</h2>
-    <p>Soy <strong>Jan Schroer</strong>, profesional en soporte técnico y administración de infraestructura IT. Brindo atención personalizada a empresas y particulares, asegurando entornos tecnológicos estables, seguros y eficientes.</p>
+    <p>Soy <strong>Jan Schroer</strong>, técnico especializado en soporte y administración de infraestructura IT. Brindo soluciones confiables y personalizadas para empresas y profesionales, priorizando la eficiencia, la seguridad y la continuidad operativa.</p>
   </section>
 
   <section id="servicios">
@@ -265,67 +278,66 @@
     <ul>
       <li>
         <div class="servicio-header">
-          <span><span class="servicio-icon">✔</span>Soporte remoto y en sitio</span>
+          <span><i class="fas fa-headset"></i> Soporte remoto y en sitio</span>
           <button class="toggle-desc">+</button>
         </div>
-        <p class="servicio-desc">Atención rápida y profesional, ya sea remota o presencial.</p>
+        <p class="servicio-desc">Asistencia técnica profesional, ya sea presencial o a distancia, con tiempos de respuesta rápidos y diagnóstico preciso.</p>
       </li>
+
       <li>
         <div class="servicio-header">
-          <span><span class="servicio-icon">✔</span>Mantenimiento de servidores y redes</span>
+          <span><i class="fas fa-server"></i> Mantenimiento de servidores</span>
           <button class="toggle-desc">+</button>
         </div>
-        <p class="servicio-desc">Chequeo preventivo, actualizaciones y reparación de infraestructura IT.</p>
+        <p class="servicio-desc">Monitoreo, actualización y reparación de sistemas y servidores críticos para garantizar estabilidad y rendimiento.</p>
       </li>
+
       <li>
         <div class="servicio-header">
-          <span><span class="servicio-icon">✔</span>Redes seguras</span>
+          <span><i class="fas fa-network-wired"></i> Redes seguras</span>
           <button class="toggle-desc">+</button>
         </div>
-        <p class="servicio-desc">Implementación y administración de firewalls y routers con pfSense, Mikrotik y Ubiquiti.</p>
+        <p class="servicio-desc">Diseño, implementación y administración de redes seguras con tecnologías pfSense, Mikrotik y Ubiquiti.</p>
       </li>
+
       <li>
         <div class="servicio-header">
-          <span><span class="servicio-icon">✔</span>Virtualización y alta disponibilidad</span>
+          <span><i class="fas fa-cloud"></i> Servicios Cloud</span>
           <button class="toggle-desc">+</button>
         </div>
-        <p class="servicio-desc">Entornos virtuales optimizados para garantizar continuidad y eficiencia.</p>
+        <p class="servicio-desc">Configuración y gestión de plataformas Microsoft 365, Azure y Google Workspace para potenciar la productividad.</p>
       </li>
+
       <li>
         <div class="servicio-header">
-          <span><span class="servicio-icon">✔</span>Consultoría IT</span>
+          <span><i class="fas fa-cogs"></i> Virtualización y alta disponibilidad</span>
           <button class="toggle-desc">+</button>
         </div>
-        <p class="servicio-desc">Asesoramiento experto para optimizar sistemas y planificar infraestructura tecnológica.</p>
+        <p class="servicio-desc">Optimización de entornos virtuales con VMware y Proxmox, garantizando eficiencia y continuidad operativa.</p>
       </li>
+
       <li>
         <div class="servicio-header">
-          <span><span class="servicio-icon">✔</span>Servicios Cloud</span>
+          <span><i class="fas fa-lightbulb"></i> Consultoría IT</span>
           <button class="toggle-desc">+</button>
         </div>
-        <p class="servicio-desc">Configuración y gestión de Microsoft 365, Azure y Google Workspace.</p>
+        <p class="servicio-desc">Asesoramiento experto para modernizar tu infraestructura y planificar soluciones escalables a largo plazo.</p>
       </li>
     </ul>
   </section>
 
-  <!-- Banner 2 -->
-  <div class="banner">
-    <img src="https://images.unsplash.com/photo-1581090700227-6d8b54b4f2b8?auto=format&fit=crop&w=1400&q=80" alt="Consultoría IT">
-  </div>
-
-  <!-- Imagen tecnologías ajustada -->
   <div class="banner-tec">
-    <img src="https://images.unsplash.com/photo-1581090700227-6d8b54b4f2b8?auto=format&fit=crop&w=1400&q=80" alt="Tecnologías IT">
+    <img src="https://images.unsplash.com/photo-1581091215367-59ab6c3c0c2a?auto=format&fit=crop&w=1600&q=80" alt="Tecnologías IT">
   </div>
 
   <section id="tecnologias">
     <h2>Tecnologías</h2>
     <ul>
-      <li>VMware vSphere ESXi, Proxmox VE</li>
+      <li>VMware vSphere, Proxmox VE</li>
       <li>Windows Server, Linux</li>
       <li>pfSense, Fortinet, Mikrotik</li>
       <li>Ubiquiti UniFi, TP-Link Omada</li>
-      <li>PBX IP (Issabel, Elastix)</li>
+      <li>PBX IP (Issabel, FreePBX)</li>
       <li>Cableado estructurado y armado de racks</li>
     </ul>
   </section>
@@ -333,24 +345,27 @@
   <section id="contacto" class="contacto">
     <h2>Contacto</h2>
     <p>¿Necesitás soporte o asesoramiento IT? Hablemos:</p>
-    <a href="mailto:eljan.88@gmail.com">📧 Enviar correo</a>
-    <a href="https://wa.me/5491169824804" target="_blank">💬 WhatsApp</a>
+    <a href="mailto:eljan.88@gmail.com"><i class="fas fa-envelope"></i> Correo</a>
+    <a href="https://wa.me/5491169824804" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
     <p>📍 Buenos Aires, Argentina</p>
   </section>
 
   <footer>
+    <div class="social">
+      <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a>
+    </div>
     <p>© 2025 Jan Schroer — Soporte Técnico IT en Buenos Aires</p>
   </footer>
 
-  <a href="https://wa.me/5491169824804" class="whatsapp-fixed" target="_blank" title="Enviar mensaje por WhatsApp">💬</a>
+  <a href="https://wa.me/5491169824804" class="whatsapp-fixed" target="_blank" title="Enviar mensaje por WhatsApp">
+    <i class="fab fa-whatsapp"></i>
+  </a>
 
   <script>
-    // Toggle dark/light
+    // Modo claro/oscuro
     const toggleBtn = document.querySelector('.dark-toggle');
-    toggleBtn.addEventListener('click', () => {
-      document.body.classList.toggle('dark');
-      toggleBtn.textContent = document.body.classList.contains('dark') ? '☀︎' : '☾';
-    });
+    toggleBtn.addEventListener('click', () => document.body.classList.toggle('light'));
 
     // Animación al hacer scroll
     const sections = document.querySelectorAll("section");
@@ -361,7 +376,7 @@
     }, { threshold: 0.2 });
     sections.forEach(sec => observer.observe(sec));
 
-    // Servicios desplegables con animación suave
+    // Servicios desplegables
     document.querySelectorAll('.toggle-desc').forEach(btn => {
       btn.addEventListener('click', () => {
         const desc = btn.parentElement.nextElementSibling;
